test/asm/interpolation.err
error: interpolation.asm(20):
    Only numerical and string symbols can be interpolated
error: Assembly aborted (1 error)!
